--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 		<script src="js/lib/angular-1.4.3.min.js"></script>
 		<script src="js/lib/angular-route-1.4.3.min.js"></script>
 		<script src="js/lib/moment-2.10.3.js"></script>
-		<script src="js/lib/showdown-1.5.1.min.js"></script>
-		<script src="js/lib/jCarousel-0.3.4.min.js"></script>
 
 		<!-- Compiled and minified CSS -->
-	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	  	<link 
+	  		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" 
+	  		rel="stylesheet" 
+	  		integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" 
+	  		crossorigin="anonymous">
 
 	  	<!-- Compiled and minified JavaScript -->
-	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+	  	<script 
+	  		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" 
+	  		integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" 
+	  		crossorigin="anonymous"></script>
 		
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
