First proto of the needle

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="js/lib/jquery-2.1.4.min.js"></script>
 		<script src="js/lib/angular-1.4.3.min.js"></script>
 		<script src="js/lib/angular-route-1.4.3.min.js"></script>
-		<script src="js/lib/moment-2.10.3.js"></script>
+		<script src="js/lib/LatLon-1.0.0.js"></script>
 
 		<!-- Compiled and minified CSS -->
 	  	<link 
