--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Rastirata</title>
 		<link rel="stylesheet" href="css/rasti.css" />
+
+		<script src="cordova.js"></script>
 		
 		<script src="js/lib/jquery-2.1.4.min.js"></script>
 		<script src="js/lib/angular-1.4.3.min.js"></script>
